# serializer version: 1
# name: TestDocxOutput.test_docx_content[btable]
  dict({
    'paragraphs': list([
    ]),
    'tables': list([
      list([
        list([
          '',
          'A',
          'B',
          '',
        ]),
        list([
          '',
          'Mean',
          'Mean',
          'p-value',
        ]),
        list([
          'x',
          '-0.08',
          '-0.13',
          '0.789',
        ]),
        list([
          'y',
          '0.13',
          '-0.06',
          '0.350',
        ]),
        list([
          '',
          '',
          '',
          '',
        ]),
      ]),
    ]),
  })
# ---
# name: TestDocxOutput.test_docx_content[dtable_grouped]
  dict({
    'paragraphs': list([
    ]),
    'tables': list([
      list([
        list([
          '',
          'A',
          'A',
          'A',
          'B',
          'B',
          'B',
        ]),
        list([
          '',
          'N',
          'Mean',
          'Std. Dev.',
          'N',
          'Mean',
          'Std. Dev.',
        ]),
        list([
          'x',
          '43.00',
          '-0.08',
          '0.76',
          '57.00',
          '-0.13',
          '1.01',
        ]),
        list([
          'y',
          '43.00',
          '0.13',
          '0.84',
          '57.00',
          '-0.06',
          '1.03',
        ]),
        list([
          '',
          '',
          '',
          '',
          '',
          '',
          '',
        ]),
      ]),
    ]),
  })
# ---
# name: TestDocxOutput.test_docx_content[dtable_plain]
  dict({
    'paragraphs': list([
    ]),
    'tables': list([
      list([
        list([
          '',
          'N',
          'Mean',
          'Std. Dev.',
        ]),
        list([
          'x',
          '100.00',
          '-0.10',
          '0.91',
        ]),
        list([
          'y',
          '100.00',
          '0.02',
          '0.95',
        ]),
        list([
          '',
          '',
          '',
          '',
        ]),
      ]),
    ]),
  })
# ---
# name: TestDocxOutput.test_docx_content[etable_formatted]
  dict({
    'paragraphs': list([
      'Table : Regression results',
    ]),
    'tables': list([
      list([
        list([
          '',
          'Outcome',
          'Outcome',
        ]),
        list([
          '',
          '(1)',
          '(2)',
        ]),
        list([
          'Regressor',
          '''
            2.0 
             (0.0)
          ''',
          '''
            2.0 
             (0.0)
          ''',
        ]),
        list([
          'group=B',
          '',
          '''
            -0.0 
             (0.0)
          ''',
        ]),
        list([
          'Intercept',
          '''
            0.0 
             (0.0)
          ''',
          '''
            0.0 
             (0.0)
          ''',
        ]),
        list([
          'Observations',
          '100',
          '100',
        ]),
        list([
          'R²',
          '0.997',
          '0.997',
        ]),
        list([
          'Custom note.',
          'Custom note.',
          'Custom note.',
        ]),
      ]),
    ]),
  })
# ---
# name: TestDocxOutput.test_docx_content[etable_merged_heads]
  dict({
    'paragraphs': list([
    ]),
    'tables': list([
      list([
        list([
          '',
          'Panel A',
          'Panel A',
        ]),
        list([
          '',
          'Spec 1',
          'Spec 2',
        ]),
        list([
          '',
          '(1)',
          '(2)',
        ]),
        list([
          'x',
          '''
            1.994*** 
             (0.011)
          ''',
          '''
            1.994*** 
             (0.011)
          ''',
        ]),
        list([
          'group=B',
          '',
          '''
            -0.005 
             (0.020)
          ''',
        ]),
        list([
          'Intercept',
          '''
            0.008 
             (0.010)
          ''',
          '''
            0.010 
             (0.015)
          ''',
        ]),
        list([
          'Observations',
          '100',
          '100',
        ]),
        list([
          'R²',
          '0.997',
          '0.997',
        ]),
        list([
          'Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)',
          'Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)',
          'Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)',
        ]),
      ]),
    ]),
  })
# ---
# name: TestDocxOutput.test_docx_content[etable_multi_model]
  dict({
    'paragraphs': list([
    ]),
    'tables': list([
      list([
        list([
          '',
          'y',
          'y',
        ]),
        list([
          '',
          '(1)',
          '(2)',
        ]),
        list([
          'x',
          '''
            1.994*** 
             (0.011)
          ''',
          '''
            1.994*** 
             (0.011)
          ''',
        ]),
        list([
          'group=B',
          '',
          '''
            -0.005 
             (0.020)
          ''',
        ]),
        list([
          'Intercept',
          '''
            0.008 
             (0.010)
          ''',
          '''
            0.010 
             (0.015)
          ''',
        ]),
        list([
          'Observations',
          '100',
          '100',
        ]),
        list([
          'R²',
          '0.997',
          '0.997',
        ]),
        list([
          'Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)',
          'Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)',
          'Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)',
        ]),
      ]),
    ]),
  })
# ---
# name: TestDocxOutput.test_docx_content[etable_plain]
  dict({
    'paragraphs': list([
    ]),
    'tables': list([
      list([
        list([
          '',
          'y',
        ]),
        list([
          '',
          '(1)',
        ]),
        list([
          'x',
          '''
            1.986*** 
             (0.006)
          ''',
        ]),
        list([
          'Intercept',
          '''
            0.131*** 
             (0.021)
          ''',
        ]),
        list([
          'Observations',
          '100',
        ]),
        list([
          'R²',
          '0.999',
        ]),
        list([
          'Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)',
          'Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)',
        ]),
      ]),
    ]),
  })
# ---
# name: TestDocxOutput.test_docx_content[etable_wide]
  dict({
    'paragraphs': list([
    ]),
    'tables': list([
      list([
        list([
          '',
          'y',
          'y',
          'y',
          'y',
          'y',
          'y',
        ]),
        list([
          '',
          '(1)',
          '(2)',
          '(3)',
          '(4)',
          '(5)',
          '(6)',
        ]),
        list([
          'x',
          '''
            1.994*** 
             (0.011)
          ''',
          '''
            1.994*** 
             (0.011)
          ''',
          '''
            1.994*** 
             (0.011)
          ''',
          '''
            1.994*** 
             (0.011)
          ''',
          '''
            1.994*** 
             (0.011)
          ''',
          '''
            1.994*** 
             (0.011)
          ''',
        ]),
        list([
          'group=B',
          '',
          '''
            -0.005 
             (0.020)
          ''',
          '',
          '''
            -0.005 
             (0.020)
          ''',
          '',
          '''
            -0.005 
             (0.020)
          ''',
        ]),
        list([
          'Intercept',
          '''
            0.008 
             (0.010)
          ''',
          '''
            0.010 
             (0.015)
          ''',
          '''
            0.008 
             (0.010)
          ''',
          '''
            0.010 
             (0.015)
          ''',
          '''
            0.008 
             (0.010)
          ''',
          '''
            0.010 
             (0.015)
          ''',
        ]),
        list([
          'Observations',
          '100',
          '100',
          '100',
          '100',
          '100',
          '100',
        ]),
        list([
          'R²',
          '0.997',
          '0.997',
          '0.997',
          '0.997',
          '0.997',
          '0.997',
        ]),
        list([
          'Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)',
          'Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)',
          'Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)',
          'Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)',
          'Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)',
          'Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)',
          'Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)',
        ]),
      ]),
    ]),
  })
# ---
# name: TestLatexOutput.test_tex_snapshot[btable]
  '''
  \begin{threeparttable}
  \begingroup
  \renewcommand\cellalign{t}
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}l>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{1}{c}{A} & \multicolumn{1}{c}{B} & \multicolumn{1}{c}{} \\
  \cmidrule(lr){2-2} \cmidrule(lr){3-3} \cmidrule(lr){4-4}
   & Mean & Mean & p-value \\
  \midrule
  \addlinespace[1ex]
  x & -0.08 & -0.13 & 0.789 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  y & 0.13 & -0.06 & 0.350 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  \end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestLatexOutput.test_tex_snapshot[dtable_grouped]
  '''
  \begin{threeparttable}
  \begingroup
  \renewcommand\cellalign{t}
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}l>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{3}{c}{A} & \multicolumn{3}{c}{B} \\
  \cmidrule(lr){2-4} \cmidrule(lr){5-7}
   & N & Mean & Std. Dev. & N & Mean & Std. Dev. \\
  \midrule
  \addlinespace[1ex]
  x & 43.00 & -0.08 & 0.76 & 57.00 & -0.13 & 1.01 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  y & 43.00 & 0.13 & 0.84 & 57.00 & -0.06 & 1.03 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  \end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestLatexOutput.test_tex_snapshot[dtable_plain]
  '''
  \begin{threeparttable}
  \begingroup
  \renewcommand\cellalign{t}
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}l>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & N & Mean & Std. Dev. \\
  \midrule
  \addlinespace[1ex]
  x & 100.00 & -0.10 & 0.91 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  y & 100.00 & 0.02 & 0.95 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  \end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestLatexOutput.test_tex_snapshot[etable_formatted]
  '''
  \begin{table}[htbp]
  \centering
  \caption{Regression results}
  \smallskip
  \begin{threeparttable}
  \begingroup
  \renewcommand\cellalign{t}
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}l>{\centering\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{2}{c}{Outcome} \\
  \cmidrule(lr){2-3}
   & (1) & (2) \\
  \midrule
  \addlinespace[1ex]
  Regressor & \makecell{2.0 \\ (0.0)} & \makecell{2.0 \\ (0.0)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  group=B &  & \makecell{-0.0 \\ (0.0)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  Intercept & \makecell{0.0 \\ (0.0)} & \makecell{0.0 \\ (0.0)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  $R^2$ & 0.997 & 0.997 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Custom note.\end{minipage}
  
  \end{threeparttable}
  \end{table}
  '''
# ---
# name: TestLatexOutput.test_tex_snapshot[etable_merged_heads]
  '''
  \begin{threeparttable}
  \begingroup
  \renewcommand\cellalign{t}
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}l>{\centering\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{2}{c}{Panel A} \\
  \cmidrule(lr){2-3}
   & \multicolumn{1}{c}{Spec 1} & \multicolumn{1}{c}{Spec 2} \\
  \cmidrule(lr){2-2} \cmidrule(lr){3-3}
   & (1) & (2) \\
  \midrule
  \addlinespace[1ex]
  x & \makecell{1.994*** \\ (0.011)} & \makecell{1.994*** \\ (0.011)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  group=B &  & \makecell{-0.005 \\ (0.020)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  Intercept & \makecell{0.008 \\ (0.010)} & \makecell{0.010 \\ (0.015)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  $R^2$ & 0.997 & 0.997 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestLatexOutput.test_tex_snapshot[etable_multi_model]
  '''
  \begin{threeparttable}
  \begingroup
  \renewcommand\cellalign{t}
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}l>{\centering\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{2}{c}{y} \\
  \cmidrule(lr){2-3}
   & (1) & (2) \\
  \midrule
  \addlinespace[1ex]
  x & \makecell{1.994*** \\ (0.011)} & \makecell{1.994*** \\ (0.011)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  group=B &  & \makecell{-0.005 \\ (0.020)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  Intercept & \makecell{0.008 \\ (0.010)} & \makecell{0.010 \\ (0.015)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  $R^2$ & 0.997 & 0.997 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestLatexOutput.test_tex_snapshot[etable_plain]
  '''
  \begin{threeparttable}
  \begingroup
  \renewcommand\cellalign{t}
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}l>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{1}{c}{y} \\
  \cmidrule(lr){2-2}
   & (1) \\
  \midrule
  \addlinespace[1ex]
  x & \makecell{1.986*** \\ (0.006)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  Intercept & \makecell{0.131*** \\ (0.021)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  $R^2$ & 0.999 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestLatexOutput.test_tex_snapshot[etable_wide]
  '''
  \begin{threeparttable}
  \begingroup
  \renewcommand\cellalign{t}
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}l>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{6}{c}{y} \\
  \cmidrule(lr){2-7}
   & (1) & (2) & (3) & (4) & (5) & (6) \\
  \midrule
  \addlinespace[1ex]
  x & \makecell{1.994*** \\ (0.011)} & \makecell{1.994*** \\ (0.011)} & \makecell{1.994*** \\ (0.011)} & \makecell{1.994*** \\ (0.011)} & \makecell{1.994*** \\ (0.011)} & \makecell{1.994*** \\ (0.011)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  group=B &  & \makecell{-0.005 \\ (0.020)} &  & \makecell{-0.005 \\ (0.020)} &  & \makecell{-0.005 \\ (0.020)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  Intercept & \makecell{0.008 \\ (0.010)} & \makecell{0.010 \\ (0.015)} & \makecell{0.008 \\ (0.010)} & \makecell{0.010 \\ (0.015)} & \makecell{0.008 \\ (0.010)} & \makecell{0.010 \\ (0.015)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 & 100 & 100 & 100 & 100 & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  $R^2$ & 0.997 & 0.997 & 0.997 & 0.997 & 0.997 & 0.997 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestLatexPdfOutput.test_pdf_content
  '''
  y
  (1)
  x 1.986***
  (0.006)
  Intercept 0.131***
  (0.021)
  Observations 100
  R2 0.999
  Significancelevels: *p¡0.1,**p¡0.05,***p¡0.01. Formatofcoefficientcell: Coefficient(Std. Error)
  '''
# ---
# name: TestTypstOutput.test_typst_pdf_content[btable]
  '''
  A B
  Mean Mean p-value
  x −0.08 −0.13 0.789
  y 0.13 −0.06 0.350
  '''
# ---
# name: TestTypstOutput.test_typst_pdf_content[dtable_grouped]
  '''
  A B
  N Mean Std. Dev. N Mean Std. Dev.
  x 43.00 −0.08 0.76 57.00 −0.13 1.01
  y 43.00 0.13 0.84 57.00 −0.06 1.03
  '''
# ---
# name: TestTypstOutput.test_typst_pdf_content[dtable_plain]
  '''
  N Mean Std. Dev.
  x 100.00 −0.10 0.91
  y 100.00 0.02 0.95
  '''
# ---
# name: TestTypstOutput.test_typst_pdf_content[etable_formatted]
  '''
  Outcome
  (1) (2)
  Regressor 2.0 2.0
  (0.0) (0.0)
  group=B −0.0
  (0.0)
  Intercept 0.0 0.0
  (0.0) (0.0)
  Observations 100 100
  𝑅2 0.997 0.997
  Custom note.
  Table 1: Regression results
  '''
# ---
# name: TestTypstOutput.test_typst_pdf_content[etable_merged_heads]
  '''
  Panel A
  Spec 1 Spec 2
  (1) (2)
  x 1.994*** 1.994***
  (0.011) (0.011)
  group=B −0.005
  (0.020)
  Intercept 0.008 0.010
  (0.010) (0.015)
  Observations 100 100
  𝑅2 0.997 0.997
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient (Std. Error)
  '''
# ---
# name: TestTypstOutput.test_typst_pdf_content[etable_multi_model]
  '''
  y
  (1) (2)
  x 1.994*** 1.994***
  (0.011) (0.011)
  group=B −0.005
  (0.020)
  Intercept 0.008 0.010
  (0.010) (0.015)
  Observations 100 100
  𝑅2 0.997 0.997
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient (Std. Error)
  '''
# ---
# name: TestTypstOutput.test_typst_pdf_content[etable_plain]
  '''
  y
  (1)
  x 1.986***
  (0.006)
  Intercept 0.131***
  (0.021)
  Observations 100
  𝑅2 0.999
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient (Std. Error)
  '''
# ---
# name: TestTypstOutput.test_typst_pdf_content[etable_wide]
  '''
  y
  (1) (2) (3) (4) (5) (6)
  x 1.994*** 1.994*** 1.994*** 1.994*** 1.994*** 1.994***
  (0.011) (0.011) (0.011) (0.011) (0.011) (0.011)
  group=B −0.005 −0.005 −0.005
  (0.020) (0.020) (0.020)
  Intercept 0.008 0.010 0.008 0.010 0.008 0.010
  (0.010) (0.015) (0.010) (0.015) (0.010) (0.015)
  Observations 100 100 100 100 100 100
  𝑅2 0.997 0.997 0.997 0.997 0.997 0.997
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient (Std. Error)
  '''
# ---
# name: TestTypstOutput.test_typst_snapshot[btable]
  '''
  #table(
    columns: (auto, 1fr, 1fr, 1fr), align: (left, center, center, center),
    column-gutter: (0em, 0.5em, 0.5em),
    stroke: none, row-gutter: 0.2em,
    table.hline(stroke: 0.08em),
    [], [#table.cell(colspan: 1)[A]], [#table.cell(colspan: 1)[B]], [#table.cell(colspan: 1)[]],
    table.hline(stroke: 0.03em, start: 1, end: 2),
    table.hline(stroke: 0.03em, start: 2, end: 3),
    table.hline(stroke: 0.03em, start: 3, end: 4),
    [], [Mean], [Mean], [p-value],
    table.hline(stroke: 0.05em),
    [x], [-0.08], [-0.13], [0.789],
    [y], [0.13], [-0.06], [0.350],
    table.hline(stroke: 0.08em),
  )
  '''
# ---
# name: TestTypstOutput.test_typst_snapshot[dtable_grouped]
  '''
  #table(
    columns: (auto, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr), align: (left, center, center, center, center, center, center),
    column-gutter: (0em, 0em, 0em, 0.5em, 0em, 0em),
    stroke: none, row-gutter: 0.2em,
    table.hline(stroke: 0.08em),
    [], [#table.cell(colspan: 3)[A]], [#table.cell(colspan: 3)[B]],
    table.hline(stroke: 0.03em, start: 1, end: 4),
    table.hline(stroke: 0.03em, start: 4, end: 7),
    [], [N], [Mean], [Std. Dev.], [N], [Mean], [Std. Dev.],
    table.hline(stroke: 0.05em),
    [x], [43.00], [-0.08], [0.76], [57.00], [-0.13], [1.01],
    [y], [43.00], [0.13], [0.84], [57.00], [-0.06], [1.03],
    table.hline(stroke: 0.08em),
  )
  '''
# ---
# name: TestTypstOutput.test_typst_snapshot[dtable_plain]
  '''
  #table(
    columns: (auto, 1fr, 1fr, 1fr), align: (left, center, center, center),
    stroke: none, row-gutter: 0.2em,
    table.hline(stroke: 0.08em),
    [], [N], [Mean], [Std. Dev.],
    table.hline(stroke: 0.05em),
    [x], [100.00], [-0.10], [0.91],
    [y], [100.00], [0.02], [0.95],
    table.hline(stroke: 0.08em),
  )
  '''
# ---
# name: TestTypstOutput.test_typst_snapshot[etable_formatted]
  '''
  #figure([
  #table(
    columns: (auto, 1fr, 1fr), align: (left, center, center),
    column-gutter: (0em, 0em),
    stroke: none, row-gutter: 0.2em,
    table.hline(stroke: 0.08em),
    [], [#table.cell(colspan: 2)[Outcome]],
    table.hline(stroke: 0.03em, start: 1, end: 3),
    [], [(1)], [(2)],
    table.hline(stroke: 0.05em),
    table.hline(stroke: 0.03em),
    [Regressor], [2.0 \ (0.0)], [2.0 \ (0.0)],
    [group=B], [], [-0.0 \ (0.0)],
    [Intercept], [0.0 \ (0.0)], [0.0 \ (0.0)],
    table.hline(stroke: 0.03em),
    table.hline(stroke: 0.03em),
    [Observations], [100], [100],
    [$R^2$], [0.997], [0.997],
    table.hline(stroke: 0.08em),
    [#table.cell(colspan: 3)[#text(size: 10pt)[Custom note.]]],
  )
  ], caption: [Regression results])
  '''
# ---
# name: TestTypstOutput.test_typst_snapshot[etable_merged_heads]
  '''
  #table(
    columns: (auto, 1fr, 1fr), align: (left, center, center),
    column-gutter: (0em, 0.5em),
    stroke: none, row-gutter: 0.2em,
    table.hline(stroke: 0.08em),
    [], [#table.cell(colspan: 2)[Panel A]],
    table.hline(stroke: 0.03em, start: 1, end: 3),
    [], [#table.cell(colspan: 1)[Spec 1]], [#table.cell(colspan: 1)[Spec 2]],
    table.hline(stroke: 0.03em, start: 1, end: 2),
    table.hline(stroke: 0.03em, start: 2, end: 3),
    [], [(1)], [(2)],
    table.hline(stroke: 0.05em),
    table.hline(stroke: 0.03em),
    [x], [1.994\*\*\* \ (0.011)], [1.994\*\*\* \ (0.011)],
    [group=B], [], [-0.005 \ (0.020)],
    [Intercept], [0.008 \ (0.010)], [0.010 \ (0.015)],
    table.hline(stroke: 0.03em),
    table.hline(stroke: 0.03em),
    [Observations], [100], [100],
    [$R^2$], [0.997], [0.997],
    table.hline(stroke: 0.08em),
    [#table.cell(colspan: 3)[#text(size: 10pt)[Significance levels: \* p \< 0.1, \*\* p \< 0.05, \*\*\* p \< 0.01. Format of coefficient cell: Coefficient   (Std. Error)]]],
  )
  '''
# ---
# name: TestTypstOutput.test_typst_snapshot[etable_multi_model]
  '''
  #table(
    columns: (auto, 1fr, 1fr), align: (left, center, center),
    column-gutter: (0em, 0em),
    stroke: none, row-gutter: 0.2em,
    table.hline(stroke: 0.08em),
    [], [#table.cell(colspan: 2)[y]],
    table.hline(stroke: 0.03em, start: 1, end: 3),
    [], [(1)], [(2)],
    table.hline(stroke: 0.05em),
    table.hline(stroke: 0.03em),
    [x], [1.994\*\*\* \ (0.011)], [1.994\*\*\* \ (0.011)],
    [group=B], [], [-0.005 \ (0.020)],
    [Intercept], [0.008 \ (0.010)], [0.010 \ (0.015)],
    table.hline(stroke: 0.03em),
    table.hline(stroke: 0.03em),
    [Observations], [100], [100],
    [$R^2$], [0.997], [0.997],
    table.hline(stroke: 0.08em),
    [#table.cell(colspan: 3)[#text(size: 10pt)[Significance levels: \* p \< 0.1, \*\* p \< 0.05, \*\*\* p \< 0.01. Format of coefficient cell: Coefficient   (Std. Error)]]],
  )
  '''
# ---
# name: TestTypstOutput.test_typst_snapshot[etable_plain]
  '''
  #table(
    columns: (auto, 1fr), align: (left, center),
    column-gutter: (0em),
    stroke: none, row-gutter: 0.2em,
    table.hline(stroke: 0.08em),
    [], [#table.cell(colspan: 1)[y]],
    table.hline(stroke: 0.03em, start: 1, end: 2),
    [], [(1)],
    table.hline(stroke: 0.05em),
    table.hline(stroke: 0.03em),
    [x], [1.986\*\*\* \ (0.006)],
    [Intercept], [0.131\*\*\* \ (0.021)],
    table.hline(stroke: 0.03em),
    table.hline(stroke: 0.03em),
    [Observations], [100],
    [$R^2$], [0.999],
    table.hline(stroke: 0.08em),
    [#table.cell(colspan: 2)[#text(size: 10pt)[Significance levels: \* p \< 0.1, \*\* p \< 0.05, \*\*\* p \< 0.01. Format of coefficient cell: Coefficient   (Std. Error)]]],
  )
  '''
# ---
# name: TestTypstOutput.test_typst_snapshot[etable_wide]
  '''
  #table(
    columns: (auto, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr), align: (left, center, center, center, center, center, center),
    column-gutter: (0em, 0em, 0em, 0em, 0em, 0em),
    stroke: none, row-gutter: 0.2em,
    table.hline(stroke: 0.08em),
    [], [#table.cell(colspan: 6)[y]],
    table.hline(stroke: 0.03em, start: 1, end: 7),
    [], [(1)], [(2)], [(3)], [(4)], [(5)], [(6)],
    table.hline(stroke: 0.05em),
    table.hline(stroke: 0.03em),
    [x], [1.994\*\*\* \ (0.011)], [1.994\*\*\* \ (0.011)], [1.994\*\*\* \ (0.011)], [1.994\*\*\* \ (0.011)], [1.994\*\*\* \ (0.011)], [1.994\*\*\* \ (0.011)],
    [group=B], [], [-0.005 \ (0.020)], [], [-0.005 \ (0.020)], [], [-0.005 \ (0.020)],
    [Intercept], [0.008 \ (0.010)], [0.010 \ (0.015)], [0.008 \ (0.010)], [0.010 \ (0.015)], [0.008 \ (0.010)], [0.010 \ (0.015)],
    table.hline(stroke: 0.03em),
    table.hline(stroke: 0.03em),
    [Observations], [100], [100], [100], [100], [100], [100],
    [$R^2$], [0.997], [0.997], [0.997], [0.997], [0.997], [0.997],
    table.hline(stroke: 0.08em),
    [#table.cell(colspan: 7)[#text(size: 10pt)[Significance levels: \* p \< 0.1, \*\* p \< 0.05, \*\*\* p \< 0.01. Format of coefficient cell: Coefficient   (Std. Error)]]],
  )
  '''
# ---
